@@ -1,5 +1,7 @@
 Revision history for Perl extension Class::C3.
 
+    - Update compiler detection to use ExtUtils::HasCompiler
+
 0.28 - 2015-04-14
     - Change link to Dylan paper to use archive.org, as the original link has
       gone offline (RT#99756).
